# QRCodeMaker-cpp

./: CMakeLists.txt  README.md
.github/workflows/: build-test-deploy-desktop.yml
lib/: CMakeLists.txt
lib/include/: qrcode-util.hpp  qrcodegen.hpp
lib/include/content/: app-market.hpp  biz-card.hpp  calendar.hpp  email.hpp  face-time.hpp  geo.hpp  me-card.hpp  phone-call.hpp  sms.hpp  v-card.hpp  wifi.hpp
lib/src/qrcode/: qrcode-util.cpp  qrcodegen.cpp
lib/src/qrcode/content/: app-market.cpp  biz-card.cpp  calendar.cpp  email.cpp  face-time.cpp  geo.cpp  me-card.cpp  phone-call.cpp  sms.cpp  v-card.cpp  wifi.cpp
lib/src/util/: string-util.cpp  string-util.hpp  string-util.tpp
module/: CMakeLists.txt
module/src/: main.cpp  main.hpp
scripts/: build-run.sh  build-test.sh  run.sh  test.sh
test/: CMakeLists.txt
test/src/qrcode/content/: app-market-test.cpp  biz-card-test.cpp  calendar-test.cpp  email-test.cpp  face-time-test.cpp  geo-test.cpp  me-card-test.cpp  phone-call-test.cpp  sms-test.cpp  v-card-test.cpp  wifi-test.cpp
test/src/test-util/: assertion.hpp  assertion.tpp  test-platform.cpp  test-platform.hpp
test/src/util/: string-util-test.cpp
